gap issue with header

--- a/source/webapp/sites/all/themes/checkbook3/css/trends.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/trends.css
@@ -384,7 +384,7 @@ body.page-trends-landing-trends-node-395 #page-title {
     display: none;
 }
 body.page-trends-landing-trends-node-395 #zone-content{
-    margin-top:15px;
+    /*margin-top:15px;*/
 }
 #node-widget-395 #page-titleSpecial{margin-bottom: 7px;}
 #node-widget-395 a.trends-export{top:10px;}
